Adds xsl styling of catalog listing.

--- a/catalog.html
+++ b/catalog.html
@@ -8,11 +8,17 @@
         </div>
     </div>
     <div class="row-fluid">
-        <div class="col-md-12"><!-- Titles -->
+        <div class="col-md-6"><!-- TOC -->
             <h2>Table of Contents</h2>
             <ol data-template="catalog:toc">
                 <li>Lorem ipsum</li>
             </ol>
+        </div>
+        <div class="col-md-6" data-template="catalog:section">
+            <h2>Section of the Catalog</h2>
+            <article data-template="catalog:section-display">
+                <p>The section goes here.</p>
+            </article>
         </div>
     </div>
 </article>
