work to improve appearance.

--- a/catalog.html
+++ b/catalog.html
@@ -3,19 +3,18 @@
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
-                <h1>CATALOGO RAGIONATO</h1>
+                <h1>Catalogo ragionato</h1>
             </div>
         </div>
     </div>
     <div class="row-fluid">
-        <div class="col-md-6"><!-- TOC -->
-            <h2>Table of Contents</h2>
+        <div class="col-md-4" id="toc"><!-- TOC -->
+            <h2>Table of contents</h2>
             <ol data-template="catalog:toc">
                 <li>Lorem ipsum</li>
             </ol>
         </div>
-        <div class="col-md-6" data-template="catalog:section">
-            <h2>Section of the Catalog</h2>
+        <div class="col-md-8" data-template="catalog:section">
             <article data-template="catalog:section-display">
                 <p>The section goes here.</p>
             </article>
